--- a/src/main/fabric8/deployment.yaml
+++ b/src/main/fabric8/deployment.yaml
@@ -8,7 +8,7 @@ spec:
             name: app-config
             # Define the items from the config map to mount
             items:
-            - key: app-config.yml
+            - key: app-config
               path: app-config.yml
             # Volume name (used as reference below)
           name: config
