--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.openshift.example</groupId>
   <artifactId>configmap-vertx</artifactId>
-  <version>38-SNAPSHOT</version>
+  <version>38</version>
   <packaging>jar</packaging>
 
   <name>vertx-http-configmap</name>
