--- a/pom.xml
+++ b/pom.xml
@@ -213,11 +213,11 @@
                       <value>frontend</value>
                     </property>
                     <property>
-                      <name>app.kubernetes.io/runtime</name>
+                      <name>app.openshift.io/runtime</name>
                       <value>vertx</value>
                     </property>
                     <property>
-                      <name>app.kubernetes.io/runtime-version</name>
+                      <name>app.openshift.io/runtime-version</name>
                       <value>${vertx.version}</value>
                     </property>
                   </all>
@@ -225,7 +225,7 @@
                 <annotations>
                   <all>
                     <property>
-                      <name>app.kubernetes.io/vcs-uri</name>
+                      <name>app.openshift.io/vcs-uri</name>
                       <value>${git.remote.origin.url}</value>
                     </property>
                   </all>
